# CCOM

./: CMakeLists.txt  Makefile  main.c
docs/编译器入门豆包版/: 创建计算器级别的语言.md  前言.md  机器语言和汇编语言.md
include/ccom/backend/codegen/: asmcode.h
include/ccom/common/: globals.h
include/ccom/frontend/ast/: ast.h
include/ccom/frontend/lexer/tokenize/: tokenize.h
include/ccom/frontend/parser/: parser.h  token.h
include/ccom/tokenize/: tokenize.h
include/ccom/utils/: error.h  string.h
source/ccom/backend/codegen/: asmcode.c
source/ccom/common/: globals.c
source/ccom/frontend/lexer/tokenize/: tokenize.c
source/ccom/frontend/parser/: parser.c  token.c
source/ccom/tokenize/: tokenize.c
source/ccom/utils/: error.c
test/: test_ccom.py
